--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body{
         >input{
             height: 50px;
             width: 100%;
-            font-size: 2vw;
+            font-size: 80%;
             text-align: center;
             border: 2px solid black;
             border-radius: 10px;
@@ -95,7 +95,7 @@ body{
         margin-top:2%;
         >input{
             width: 30%;
-            font-size: 1.5vw;
+            font-size: 2vw;
             border-radius: 10px;
         }
     }
